2003/12/14 14:41 (-0500) muppetman

	* xs/GtkTreeModel.xs: typo in pod; kaffee's fix merged from HEAD.

2003/12/12 11:39 (-0500) muppetman

	* xs/GtkWidget.xs: alias values in get_flags got changed, but the
	switches on ix were not updated, leading to bugs whenever apps tried
	to read or write flag values.  fixed.  renamed get_flags to
	flags_handler (it's hidden from API docs), and created a new xsub
	named flags (aliased to get_flags) as a binding for GTK_WIDGET_FLAGS.

	A t/01.GtkWidget.t
	* MANIFEST: new test, an attempt to catch future flags regressions.

	* MANIFEST: changelog says fetch_faq.pl was added to MANIFEST, but it
	wasn't there.

2003/12/11 22:16 (-0500) muppetman

	* Gtk2.pm, README: stable release 1.020
	
	* Makefile.PL: require Glib 1.020

	* podifystockitems.pl: don't use -init; not needed, and keeps the
	build from working when no display is available.

2003/12/11 16:53 (-0500) muppetman

	* t/27.GtkClipboard.t, t/30.GtkCellRenderer.t, t/text-iter-searches.t:
	these didn't skip all tests when there is no display, making builds
	fail on headless build servers.  it would be nice to wrap up some of
	this testing boilerplate a bit more.

2003/12/04 22:28 (-0500) muppetman

	* Gtk2.pm, README, Makefile.PL: bump version to 1.014 for release, and
	require Glib.pm

2003/12/04 09:44 (-0500) rwmcfa1

	* : Merged from HEAD
	
	* Makefile.PL: --enable-faq added and worked out

	* fetch_faq.pl, MANIFEST: initial import for fetch_faq.pl, needs 
	testing

2003/12/04 00:56 (-0500) rwmcfa1

	* xs/GtkRadioButton.xs: broken signature fixed

2003/12/03 21:13 (-0500) muppetman

	* Gtk2.pm: sync the AUTHORS section with the AUTHORS file.

	* AUTHORS: doesn't need to point to itself.  use a pointer to LICENSE
	instead of boilerplate longer than the file's contents.

2003/12/03 19:16 (-0500) rwmcfa1

	* xs/(bunch).xs: ... (list) comments corrected

	* xs/GtkTreeDnd.xs: ^ and fixed bug in api of 
	gtk_tree_drag_source_drag_data_get, selection_data is an out param.
