@@ -1,6 +1,6 @@
 # $Header$
 
-Gtk2 version 1.020
+Gtk2 version 1.021
 ==================
 
 Perl bindings to the 2.x series of the Gtk+ graphical user interface library.
