@@ -1,3 +1,13 @@
+2003/12/15 23:18 (-0500) muppetman
+
+	* Gtk2.pm, README: stable (bugfix) release 1.021
+
+	* xs/GtkList.xs: merge ross' fix from HEAD; list validity checks
+	were being performed on the wrong values.
+
+	* xs/GtkTreeStore.xs: merged my treestore->reorder fix from HEAD; was
+	reading indexes from stack incorrectly.  regression tests are in HEAD.
+
 2003/12/14 14:41 (-0500) muppetman
 
 	* xs/GtkTreeModel.xs: typo in pod; kaffee's fix merged from HEAD.
